Vishal Updated Files

--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-02.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-02.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-01.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-03.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-02><span class=incFontSz>+ </span><a href=#index>
-﻿Second verse makes the declaration of composing the work Sanmati-Tarka and states its object in doing so --</a><span class=decFontSz> -</span></div>
+﻿यह रचना मन्द-बुद्धि वालों के लिए</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿समयपरमत्थवित्थरविहाडजणपज्जुवासणसयन्नो।<br>आगममलारहियओ जह होइ तमत्थमुन्नेसुं ॥2॥</div>
+    <div class=gathaS>﻿समयपरमार्थविस्तरविहाटजनपर्युपासनसकर्ण: ।<br>आगममन्दहृदयो यथा भवति तमर्थमुन्नेष्ये ॥2॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[आगममलारहियओ]</font></b> आगम <span class=comment>(समझने में)</span> मन्‍द बुद्धि वालों के लिए यह ग्रन्थ <b><font color=darkRed>[समयपरमत्थवित्थर]</font></b> सिद्धान्त <span class=comment>(के)</span> परमार्थ <span class=comment>(सत्यार्थ)</span> विस्तार <span class=comment>(को)</span> <b><font color=darkRed>[विहाड]</font></b> प्रकट<span class=comment>(प्रकाशित करने वाला है)</span> <b><font color=darkRed>[जण]</font></b> लोग <b><font color=darkRed>[पज्जुवासण]</font></b> पर्युपासना <span class=comment>(भमलीभांति उपासना में)</span> <b><font color=darkRed>[सयण्ण]</font></b> सावधान <b><font color=darkRed>[जह]</font></b> जैसे <span class=comment>(जिस तरह से)</span> <b><font color=darkRed>[होइ]</font></b> हो <span class=comment>(जायें)</span> <span class=comment>(वैसे ही)</span> <b><font color=darkRed>[तमत्थ मुण्णेसु]</font></b> उस अर्थ को कहूँगा ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿I shall deal with such a matter as, when stated, will inspire or stimulate even an idle fellow, with a mind as dull as that of a bull in comprehending the meaning of scriptures, to wait upon Savants or learned men who clearly illuminate real things referred to in the sacred books.</div>
   </body>
 </html>
