--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-05.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-05.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-04.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-06.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-05><span class=incFontSz>+ </span><a href=#index>
-﻿4 Subdivisions of Rjusutra Naya</a><span class=decFontSz> -</span></div>
+﻿पर्यायार्थिकनय का मूल</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿मूलणिमेणं पज्जवणयस्स उज्जुसुयवयणविच्छेदो ।<br>तस्स उ सहाईआ साहपसाहा सुहुमभेया ॥5॥</div>
+    <div class=gathaS>﻿मूलनिमानं (स्थानं) पर्यवनयस्य ऋजुसूत्रवचनविच्छेद: ।<br>तस्य तु शब्दादिकाः शाखाप्रशाखाः सूक्ष्मभेदा: ॥5॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[उज्जुसुयवयणविच्छेदो]</font></b> ऋज़ुसूत्रनय <span class=comment>(का)</span> वचन-व्यवहार <span class=comment>(ही)</span> <b><font color=darkRed>[पज्जवणयस्स]</font></b> पर्यायार्थिक नय का <b><font color=darkRed>[मूलणिमेणं]</font></b> मूल स्थान <span class=comment>(है)</span> <b><font color=darkRed>[सद्दाईआ]</font></b> शब्दादिक <span class=comment>(शब्दनय, समभिरूढ़नय, एवंभूतनय)</span> <b><font color=darkRed>[उ तस्य]</font></b> तो उस <span class=comment>(ऋजुसूत्रनय)</span> के <b><font color=darkRed>[साहपसाहा]</font></b> शाखा-प्रशाखा <span class=comment>(रूप)</span> <b><font color=darkRed>[सुहुमभेया]</font></b> सूक्ष्म भेद हैं ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Rjusutra Naya is the very foundation of the Paryayastika Naya. Sabda and other minor Nayas are, of course, subtle varieties of Rjusutra, its branches and twigs.</div>
   </body>
 </html>
