--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-07.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-07.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-08.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-07><span class=incFontSz>+ </span><a href=#index>
-﻿Distribution of Nayas amongst various statements.</a><span class=decFontSz> -</span></div>
+﻿दोनों नयों का विषय</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿पज्जवणिस्सामण्णं वयणं दव्वट्ठियस्स 'अत्थि' त्ति ।<br>अवसेसो वयणविही पज्जवभयणा सपडिवक्खो ॥7॥</div>
+    <div class=gathaS>﻿पर्यवनिस्सामान्यं वचन द्रव्यार्थिकस्य अस्तीति ।<br>अवशेषो वचनविधिः पर्यवभजनात्‌ सप्रतिपक्षः ॥7॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[अत्थि]</font></b> है <span class=comment>(सत्‌)</span> <b><font color=darkRed>[त्ति]</font></b> यह <span class=comment>(वचन)</span> <b><font color=darkRed>[पज्जवणिस्सामण्णं]</font></b> पर्याय <span class=comment>(से)</span> रहित सामान्य <span class=comment>(विशेष से सर्वथा रहित)</span> <b><font color=darkRed>[दव्वट्ठियस्स]</font></b> द्रव्यार्थिक <span class=comment>(नय)</span> का <b><font color=darkRed>[ववण]</font></b> वचन <span class=comment>(विषय है)</span> <b><font color=darkRed>[पज्जवभयणा]</font></b> पर्याय <span class=comment>(के)</span> विभाग से <b><font color=darkRed>[अवसेसो]</font></b> बाकी सब <b><font color=darkRed>[वयणविही]</font></b> वचनविधि <span class=comment>(कथन-प्रकार)</span> <b><font color=darkRed>[सपडिवक्खो]</font></b> प्रतिपक्षी <span class=comment>(सापेक्ष / प्रतिपक्ष सहित)</span> है ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿ Dravyastika Naya in its pure form is only concerned with the simple statement 'It is' that is to say when the thing is inentioned divested of all its particular attributes or modifications. All other statements deal, in one way or the other, with some attribute or the other and as such is the subject of both the Dravyastika and Paryayastika.</div>
   </body>
 </html>
