--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-09.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-09.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-08.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-10.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-09><span class=incFontSz>+ </span><a href=#index>
-﻿The author in the following verse now sums up the discussion of the overlapping of the two principal Nayas</a><span class=decFontSz> -</span></div>
+﻿कोई नय शुद्ध जाति वाला नहीं</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿दव्वट्टिओ त्ति तम्हा नत्थि णओ णियम सुद्धजाईओ ।<br>ण य पज्जवट्ठिओ णाम कोइ भयणाय उ विसेसो ॥9॥</div>
+    <div class=gathaS>﻿द्रव्यार्थिक इति तस्मान्‌ नास्ति नयो नियमशुद्धजातीयः ।<br>न च पर्यायार्थिको नाम कोऽपि भजनाय तु विशेषः ॥9॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[तम्हा]</font></b> इसलिए <b><font color=darkRed>[णियमसुद्धजाईओ]</font></b> नियम से शुद्ध जातीय <b><font color=darkRed>[दव्वट्ठियो]</font></b> द्रव्यार्थिक <b><font color=darkRed>[णयो]</font></b> नय <b><font color=darkRed>[णत्थि]</font></b> नहीं है <b><font color=darkRed>[त्ति]</font></b> इसी प्रकार कोई <b><font color=darkRed>[पज्जवट्टियो]</font></b> पर्यायार्थिक <b><font color=darkRed>[णाम]</font></b> नाम <span class=comment>(नहीं है)</span> <b><font color=darkRed>[उ]</font></b> किन्तु <b><font color=darkRed>[विसेसो]</font></b> विशेष <span class=comment>(विवक्षा)</span> <b><font color=darkRed>[भयणाय]</font></b> विभाग <span class=comment>(करने)</span> के लिए है ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿This being the case, it is impossible to find a Dravyastika, in its pure form -- that is to say absolutely unmixed with Paryayastika. Similarly it is equally impossible to find a Paryayastika in its pure form that is to say totally unmixed with a Dravyastika. Hence assigning a particular statement to a particular Naya depends upon the volition of the speaker.</div>
   </body>
 </html>
