--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-10.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-10.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-09.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-11.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-10><span class=incFontSz>+ </span><a href=#index>
-﻿Attitude of each Naya towards the other rival Naya</a><span class=decFontSz> -</span></div>
+﻿दोनों नय परस्पर विरुद्ध</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿दव्वट्ठियवत्तव्वं अवत्थु णियमेण पज्जवणयस्स  ।<br>तह पज्जववत्थु अवत्थुमेव दवट्ठियनयस्स ॥१०॥</div>
+    <div class=gathaS>﻿द्रव्यार्थिकवक्तव्यमवस्त्व-नियमेन पर्यवनयस्य ।<br>तथा पर्ययवस्त्ववस्तेव द्रव्यार्थिकनयस्य ॥10॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[दव्वट्टियवत्तव्वं]</font></b> द्रव्यार्थिक <span class=comment>(नय का)</span> वक्तव्य <b><font color=darkRed>[पज्जवणयस्स]</font></b> पर्यावार्थिक नय के <span class=comment>(लिए)</span> <b><font color=darkRed>[णियमेण]</font></b> नियम से <b><font color=darkRed>[अवत्थु]</font></b> अवस्तु <span class=comment>(है)</span> <b><font color=darkRed>[तह]</font></b> उसी प्रकार <span class=comment>(से)</span> <b><font color=darkRed>[दव्वट्ठियणयस्स]</font></b> द्रव्यार्थिक नय के <span class=comment>(लिए)</span> <b><font color=darkRed>[पज्जववत्थु]</font></b> पर्यायार्थिक <span class=comment>(की)</span> वस्तु <b><font color=darkRed>[अवत्युमेव]</font></b> अवस्तु ही है ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Paryayastika does not view the positive assertion of Dravyastika as its legitimate subject. On the other hand Dravyastika looks down upon the statement of Parya. yastika in the same fashion.</div>
   </body>
 </html>
