--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-28.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-28.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-27.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-29.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-28><span class=incFontSz>+ </span><a href=#index>
-﻿How a man well versed in Anekanta looks at various views --</a><span class=decFontSz> -</span></div>
+﻿अपनी मर्यादा में सभी नय सच्चे</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿णिययवयणिज्जसच्चा सव्वनया परवियालणे मोहा ।<br>ते उण ण दिट्ठसमओ विभयइ सच्चे व अलिए वा ॥28॥</div>
+    <div class=gathaS>﻿निजकवचनीयसत्याः सर्वनयाः परविगालने मोघाः ।<br>स पुनर्न दृष्टसमयो विभजते सत्ये वा अलीके वा ॥28॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[सव्वणया]</font></b> सभी नय <b><font color=darkRed>[णियय]</font></b> अपने <span class=comment>(अपने)</span> <b><font color=darkRed>[वयणिज्ज]</font></b> वक्तव्य <span class=comment>(में)</span> <b><font color=darkRed>[सच्चा]</font></b> सच्चे हैं और <b><font color=darkRed>[परवियालणे]</font></b> दूसरे <span class=comment>(के वक्तव्य का)</span> निराकरण <span class=comment>(करने)</span> में <b><font color=darkRed>[मोहा]</font></b> व्यर्थ हैं <b><font color=darkRed>[दिट्ठसमयो]</font></b> सिद्धान्त <span class=comment>(का)</span> ज्ञाता <b><font color=darkRed>[पुण]</font></b> फिर <b><font color=darkRed>[ते]</font></b> उन <span class=comment>(नयों का)</span> <b><font color=darkRed>[सच्चे]</font></b> सत्य में <span class=comment>(यह सच्चा है)</span> <b><font color=darkRed>[व]</font></b> अथवा <b><font color=darkRed>[अलिए]</font></b> झूठ में <span class=comment>(यह झूठा है)</span> ऐसा <b><font color=darkRed>[ण]</font></b> नहीं <b><font color=darkRed>[विभयइ]</font></b> विभाग करता ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿All the Nayas are right in their own respective spheres -- but if they encroach upon the province of other Nayas and they try to refute their views they are wrong.</div>
   </body>
 </html>
