--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-30.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-30.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-29.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-31.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-30><span class=incFontSz>+ </span><a href=#index>
-﻿Nay difference in its minute details</a><span class=decFontSz> -</span></div>
+﻿व्यंजन पर्याय भिन्‍न तथा अभिन्‍न</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿जो उण समासओ च्चिय वंजणणिअओ य अत्थणिअओ य  ।<br>अत्थगओ य अभिण्णो भइयव्वो वंजणवियप्पो ॥30॥</div>
+    <div class=gathaS>﻿यः पुनः समासतश्चैव व्यंजननियतश्चार्थनियतश्च ।<br>अर्थगतश्चाभिन्‍नो भक्तव्यो व्यंजनविकल्पः ॥30॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿जो <b><font color=darkRed>[पुण]</font></b> फिर <b><font color=darkRed>[समासओ]</font></b> संक्षेप <span class=comment>(में)</span> <b><font color=darkRed>[च्चिय]</font></b> ही <b><font color=darkRed>[वंजणणियओ]</font></b> व्यंजननियत <span class=comment>(शब्दसापेक्ष)</span> <b><font color=darkRed>[य]</font></b> और <b><font color=darkRed>[अत्थणियओ]</font></b> अर्थ-नियत <span class=comment>(अर्थसापेक्ष)</span> हैं <b><font color=darkRed>[य]</font></b> और <b><font color=darkRed>[अत्थगओ]</font></b> अर्थगत <span class=comment>(विभाग)</span> <b><font color=darkRed>[अभिण्णे]</font></b> अभिन्न हैं <b><font color=darkRed>[य]</font></b> और <b><font color=darkRed>[वंजणवियप्पो]</font></b> व्यंजन-विकल्प <b><font color=darkRed>[भइयव्वो]</font></b> भाज्य <span class=comment>(भिन्‍न तथा अभिन्‍न)</span> हैं ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Moreover, difference is of two kinds <ol><li>difference depending on words and <li>difference not dependent on words that is to say conditioned by meaning.</ol>A division as regards the object itself admits of no further differences, while divisions from the point of view of words are both divisible and not divisible.</div>
   </body>
 </html>
