--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-31.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-31.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-30.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-32.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-31><span class=incFontSz>+ </span><a href=#index>
-﻿How one substance becomes manifold</a><span class=decFontSz> -</span></div>
+﻿द्रव्य कितना ?</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿एगदवियम्मि जे अत्थपज्जया वयणपज्जया वावि ।<br>तीयाणागयभूया तावइयं तं हवइ दव्वं ॥31॥</div>
+    <div class=gathaS>﻿एक द्रव्ये येऽर्थपर्याया वचनपर्याया वापि ।<br>अतीतानागतभूतास्तावतत्कं तद्‌ भवति द्रव्यम्‌ ॥31॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[एगदवियम्मि]</font></b> एक द्रव्य में <b><font color=darkRed>[जे]</font></b> जो <b><font color=darkRed>[तीयाणागयभूया]</font></b> अतीत, भविष्य <span class=comment>(और)</span> वर्तमान <span class=comment>(में)</span> <b><font color=darkRed>[अत्थपज्जया]</font></b> अर्थपर्याय <b><font color=darkRed>[वा]</font></b> अथवा <b><font color=darkRed>[वयणपज्जया]</font></b> व्यंजनपर्याय <b><font color=darkRed>[तं]</font></b> वह <b><font color=darkRed>[दव्वं]</font></b> द्रव्य <b><font color=darkRed>[तावइयं]</font></b> उतना <b><font color=darkRed>[इवइ]</font></b> होता है ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿One and the same substance assumes various forms from various standpoints; for instance from the standpoint of past, present and future it becomes three-fold subjecting itself to Artha Paryaya. In the same manner, it assumes manifold forms from Vyanjana Paryaya point of view.</div>
   </body>
 </html>
