--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-32.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-32.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-31.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-33.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-32><span class=incFontSz>+ </span><a href=#index>
-﻿An illustration of a Vyanjana Paryāya</a><span class=decFontSz> -</span></div>
+﻿व्यंजनपर्याय : सदृशपर्यायप्रवाह</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿पुरिसम्मि पुरिससद्दो जम्माई मरणकालपज्जन्तो ।<br>तस्स उ बालाईया पन्जवजोया बहुवियप्पा ॥32॥</div>
+    <div class=gathaS>﻿पुरुषे पुरुषशब्दः जन्मादिमरणकालपर्यन्तः ।<br>तस्य तु बालादिकाः पर्यवयोगा बहुविकल्पाः ॥32॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जम्माई मरणकालपज्जंतो]</font></b> जन्म से मरणकाल तक <b><font color=darkRed>[पुरिसम्मि]</font></b> पुरुष में <b><font color=darkRed>[पुरिससद्दो]</font></b> पुरुष शब्द <span class=comment>(का व्यवहार होता है)</span> <b><font color=darkRed>[तस्स उ]</font></b> उस <span class=comment>(पुरुष)</span> के तो <b><font color=darkRed>[पज्जवजोगा]</font></b> पर्याय <span class=comment>(के)</span> संयोगों से <b><font color=darkRed>[बहुवियप्पा]</font></b> अनेक विकल्प <span class=comment>(अंश)</span> होते हैं ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿A man is termed as a man from the time of his birth to the time of his death. Boy and youth and other are mere modifications of that same Purusa <span class=comment>(man)</span>.</div>
   </body>
 </html>
