--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-41.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-41.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-36-040.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-42.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-41><span class=incFontSz>+ </span><a href=#index>
-﻿Distribution of these seven modes between Artha-paryaya and Vyanjana-paryaya --</a><span class=decFontSz> -</span></div>
+﻿अर्थपर्याय तथा व्यंजनपर्याय में भंग</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿एवं सत्तवियप्पो वयणपहो होइ अत्थपज्जाए ।<br>वंजणपज्जाए उण सवियप्पो णिव्वियप्पो य ॥41॥</div>
+    <div class=gathaS>﻿एवं सप्तविकल्पो वचनपथो भवत्यर्थपर्याये ।<br>व्यंजनपर्याये पुनः सविकल्पो निर्विकल्पश्च ॥41॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[एवं]</font></b> इस प्रकार <b><font color=darkRed>[अत्थपज्जाए]</font></b> अर्थपर्याय में <b><font color=darkRed>[सत्तवियप्पो]</font></b> सात विकल्प <span class=comment>(रूप)</span> <b><font color=darkRed>[वयणपहो]</font></b> वचनमार्ग <b><font color=darkRed>[होइ]</font></b> होता है <b><font color=darkRed>[पुण]</font></b> फिर <b><font color=darkRed>[वंजणपज्जाए]</font></b> व्यंजनपर्याय में <b><font color=darkRed>[सवियप्पो]</font></b> सविकल्प <b><font color=darkRed>[य]</font></b> और <b><font color=darkRed>[णिव्वियप्पो]</font></b> निर्विकल्प <span class=comment>(रूप वचन मार्ग)</span> होता है ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿All these seven modes of stating a thing are possible in Artha Paryaya, but in Vyanjana Paryaya those statements that deal with the divisibe <span class=comment>(Savikalpa)</span> aspects of a thing as well as its indivisible aspects are possible.</div>
   </body>
 </html>
