--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-42.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-42.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-41.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-43.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-42><span class=incFontSz>+ </span><a href=#index>
-﻿Paryayarthika-naya does not cover the whole truth.</a><span class=decFontSz> -</span></div>
+﻿केवल पर्यायार्थिकनय का वक्तव्य पूर्ण नहीं</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿जह दवियमप्पियं तं तहेव अस्थि त्ति पज्जवणयस्स ।<br>ण य स समयपन्नवणा पज्जवणयमेत्तपडिपुण्णा ॥42॥</div>
+    <div class=gathaS>﻿यथा द्रव्यमर्पितं तत्तथैवास्तीति पर्यवनयस्य ।<br>न च स्वसमयप्रज्ञापना पर्यवनयमात्रप्रतिपूर्णा ॥42॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जह]</font></b> जैसे <b><font color=darkRed>[दवियं]</font></b> द्रव्य <b><font color=darkRed>[अष्पियं]</font></b> अर्पित <span class=comment>(विवक्षित)</span> <b><font color=darkRed>[तं]</font></b> वह <b><font color=darkRed>[तहेव]</font></b> वैसा ही <b><font color=darkRed>[अत्थि]</font></b> है <b><font color=darkRed>[त्ति]</font></b> यह <span class=comment>(ऐसा)</span> <b><font color=darkRed>[पज्जवणयस्स]</font></b> पर्यायार्थिकनय का <span class=comment>(कथन है)</span>; <span class=comment>(किन्तु)</span> <b><font color=darkRed>[पज्जवणयर्मेत्त]</font></b> पर्यायार्थिकनय मात्र <b><font color=darkRed>[पड़िपुण्णा]</font></b> परिपूर्ण <b><font color=darkRed>[ससमयपण्णवणा]</font></b> स्वसमय <span class=comment>(आत्मतत्त्व की)</span> प्ररूपणा <b><font color=darkRed>[ण]</font></b> नहीं <span class=comment>(है)</span> ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Paryayarthika-naya maintains that the modification which a thing undergoes at a particular time is its real nature. But this view of Paryayarthika since it does not take into consideration the substance <span class=comment>(underlying the modifications)</span> does not cover the whole truth as propagated by Jains.</div>
   </body>
 </html>
