--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-50.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-50.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-49.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-51-052.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-50><span class=incFontSz>+ </span><a href=#index>
-﻿Why a particular principle or element is said to be internal and why another is said to be external</a><span class=decFontSz> -</span></div>
+﻿बाह्याभ्यन्तर व्यवस्था की विशिष्टता</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿ण य बाहिरओ भावो अब्भंतरओ य अस्थि समयम्मि ।<br>णोइंदियं पुण पड्डञ्च होइ अब्भंतरविसेसो ॥50॥</div>
+    <div class=gathaS>﻿न च बाह्यो भावोऽभ्यंतरश्चास्ति समये ।<br>नोइन्द्रियं पुनः प्रतीत्य भवत्यभ्यन्तरविशेषः ॥50॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[समयम्मि]</font></b> शास्त्र में <b><font color=darkRed>[बाहिरओ]</font></b> बाहरी <b><font color=darkRed>[अब्भिंतरओ]</font></b>  भीतरी <b><font color=darkRed>[य]</font></b> और <b><font color=darkRed>[भावो]</font></b> भाव <b><font color=darkRed>[न]</font></b> नहीं <b><font color=darkRed>[य]</font></b> और है <b><font color=darkRed>[णोइंदियं]</font></b> नोइन्द्रिय <span class=comment>(मन)</span> <b><font color=darkRed>[पुण]</font></b> फिर <b><font color=darkRed>[पड़च्च]</font></b> आश्रय करके <b><font color=darkRed>[अब्भिंतरविसेसो]</font></b> आभ्यन्तर विशेष <b><font color=darkRed>[होइ]</font></b> होता है ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿In reality, there is no such division as external or internal; but internality depends upon mind.</div>
   </body>
 </html>
