--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-53.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-53.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-51-052.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-54.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-53><span class=incFontSz>+ </span><a href=#index>
-﻿Jaina viewpoint</a><span class=decFontSz> -</span></div>
+﻿समन्वय में जैनदृष्टि</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿जे वयणिज्जवियप्पा संजुज्जंतेसु होन्ति एएसु ।<br>सा ससमयपण्णवणा 'तित्थयराऽऽसायणा अण्णा ॥53॥</div>
+    <div class=gathaS>﻿ये वचनीयविकल्पा: संयुज्यमानेषु भवन्ति एतेषु ।<br>सा स्वसमयप्रज्ञापना तीर्थङ्कराशातना अन्याः ॥५३॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[एएसु]</font></b> इन दोनों के <b><font color=darkRed>[संजुज्जन्तेसु]</font></b> संयुक्त होने पर <b><font color=darkRed>[जें]</font></b> जो <span class=comment>(वस्तु के सम्बन्ध में)</span> <b><font color=darkRed>[वयणिज्जवियप्पा]</font></b> कथन करने योग्य विकल्प <b><font color=darkRed>[होंति]</font></b> होते हैँ <b><font color=darkRed>[सा]</font></b> वह <b><font color=darkRed>[सूसुमयपण्णवणा]</font></b> अपने सिद्धान्त की प्ररूपणा है <b><font color=darkRed>[अण्णा]</font></b> अन्य <span class=comment>(विचारधारा)</span> <b><font color=darkRed>[तित्थयरासारणा]</font></b> तीर्थंकर की आशातना है ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿The right Jaina view consists of the combination of these two Nayas with all their attendant statements.</div>
   </body>
 </html>
