--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-15.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-15.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-10-14.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-16-17.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-15><span class=incFontSz>+ </span><a href=#index>
+﻿Kramavadi tries to defend himself but is finally silenced by the author</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿भण्णइ जह चउणाणी जुज्जइ णियमा तहेव एयं पि ।<br>भण्णइ ण पंचणाणी जहेव अरहा तहेयं पि ॥15॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Kramavadi says - As it is in the case of a person who is said to possess four kinds of knowledge so also it is the case here. To this the Author says :-As the omniscient can not be said to be the possessor of five fold knowledge so also it is the case here.</div>
   </body>
 </html>
