--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-20.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-20.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='0000_शास्त्र-मंगलाचरण.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='063.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿कामं द्विषन्नप्युपपत्तिचक्षु:<br>समीक्ष्यतां ते समदृष्टिरिष्टम् ।<br>त्वयि ध्रुवं खण्डित मानशृङ्गो,<br>भवत्यभद्रोपि समंतभद्रः ॥62॥</div>
+    <a href='2-19.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-21-22.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-20><span class=incFontSz>+ </span><a href=#index>
+﻿Another reason as to why one Absolute knowledge is said to be twofold</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿चक्खुअचक्खुअवहिकेवलाण समयम्मि दंसणविअप्पा ।<br>परिपढिया केवलणाणदंसणा तेण ते अण्णा ॥20॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿In the sastra Darsana is divided into Caksu, Achaksu, Avadhi and Kevala. From this division we can say that Gyana and Darsana are different.</div>
   </body>
 </html>
