--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-21-22.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-21-22.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-20.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-23-24.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-21-22><span class=incFontSz>+ </span><a href=#index>
+﻿Following two verses describe the partial view (Ekadesi)</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿दसणमोग्गहमेत्तं 'घडो' त्ति णिव्वण्णणा हवइ णाणं ।<br>जह एत्थ केवलाण वि विसेसणं एत्तियं चेव ॥21॥<br>दंसणपुव्वं णाणं णाणणिमित्तं तु दंसणं णत्थि ।<br>तेण सुविणिच्छियामो दंसणणाणाण अण्णत्तं ॥22॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Just as all Avagraha is Darsana and definite comprehension of a thing such as 'This is a jar' is knowledge, in the same manner, definite and indefinite apprehension is the differentiating factor between Absolute knowledge and Absolute perception.<br>Perception necessarily precedes knowledge but knowledge never precedes perception. It can, therefore, be definitely: asserted that, in a Kevalin, knowledge and perception are not different from each other.</div>
   </body>
 </html>
