--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-25.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-25.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-23-24.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-26.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-25><span class=incFontSz>+ </span><a href=#index>
+﻿Siddhanti defines clearly the term Darsana</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿णाणं अप्पुट्ठे अविसए य अत्थम्मि दंसणं होइ ।<br>मोत्तूण लिंगओ जं अण्णागयाईयविसएसु ॥25॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Darshana is that kind of knowledge which takes place as regards things untouched and which do not come within proper province. This cognition does not admit in its fold that knowledge which takes place by virtue of Hetu <span class=comment>(the middle term)</span> as regards things that are to happen in future and other things.</div>
   </body>
 </html>
