--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-26.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-26.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-25.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-27.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-26><span class=incFontSz>+ </span><a href=#index>
+﻿Over-absurdity (Atiprasanga) avoided </a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿मणपज्जवणाणं दंसणं ति तेणेह होइ ण य जुत्तं ।<br>भण्णइ णाणं णोइंदियम्मि ण घडादयो जम्हा ॥26॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿According to the aforesaid definition Manahparyaya is Darsana ; but it is not so. It is laid down that proper province of this knowledge is Mind which is technically called No-indriya. The jars etc. are excluded from its sphere.</div>
   </body>
 </html>
