--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-27.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-27.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='062.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='064.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿न रागान्न: स्तोत्रं भवति भवपाशच्छिदि मुनौ,<br>न चान्येषु द्वेषादपगुणकथाभ्यासखलता ।<br>किमु न्यायान्यायप्रकृतगुणदोषज्ञ मनसां<br>हितान्वेषोपायस्तव गुणकथासङ्गगदित: ॥63॥</div>
+    <a href='2-26.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-28.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-27><span class=incFontSz>+ </span><a href=#index>
+﻿Further explanation regarding accepted arrangement</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿मइसुयणाणणिमित्तो छउमत्थे होइ अत्थउवलंभो ।<br>एगयरम्मि वि तेसिं ण दंसणं दसणं कत्तो ? ॥27॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿In the case of Chadmasthas, Mati and Sruta-Gyana are the two things responsible for arriving at a cognition of categories. If there is nothing like Mati-darsana or Sruta-darsana, how then Darsana is at all possible ?</div>
   </body>
 </html>
