--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-30.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-30.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-29.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-31.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-30><span class=incFontSz>+ </span><a href=#index>
+﻿Both Gyana and Darsana can simultaneously fit in with Kevala-upayoga which is only one</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿जं अप्पुट्ठे भावे जाणइ पासइ य केवली णियमा ।<br>तम्हा तं णाणं दंसणं च अविसेसओ सिद्धं ॥30॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Gyana and Darsana can remain simultaneously without distinction as we see in the case of a perfect being who as a rule perceives and knows the objects simultanecously.</div>
   </body>
 </html>
