--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-31.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-31.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-30.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-32-33.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-31><span class=incFontSz>+ </span><a href=#index>
+﻿Contradiction evidenced in Canonical literature avoided</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿साई अपज्जवसियं ति दो वि ते ससमयओ हवइ एवं ।<br>परतित्थयवत्तव्वं च एगसमयंतरुप्पाओ ॥31॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿According to real Jaina doctrines both Gyana and Darsana have a beginning but no end. This being the case a doctrine which formulates that there is an interval of one Samaya between the productions of both of them should not be accepted as a real Jaina Doctrine.</div>
   </body>
 </html>
