--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-32-33.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-32-33.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-31.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-34-36.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-32-33><span class=incFontSz>+ </span><a href=#index>
+﻿Explanation of Darsana when used in the sense of faith</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿एवं जिणपण्णत्ते सद्दहमाणस्स भावओ भावे ।<br>पुरिसस्साभिणिबोहे दंसणसद्दो हवइ जुत्तो ॥32॥<br>सम्मण्णाणे णियमेण दंसणं दसणे उ भयणिज्जं ।<br>सम्मण्णाणं च इमं ति अत्थओ होइ उववण्णं ॥33॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Darsana is to be strictly confined to that process of knowledge, which is styled as crude impression <span class=comment>(Abhinibodha)</span>, of one who looks at all things described by Jinas with unquestionable faith.<br>When there is Samyag-gyana, there is Samyag-Darsana always but the converse is not true.</div>
   </body>
 </html>
