--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-43.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-43.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='063.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-01.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿इति स्तुत्य: स्तुत्यैस्त्रिदशमुनिमुख्यै: प्रणिहितैः,<br>स्तुत: शक्त्या श्रेय: पदमधिगतस्त्वं जिन ! मया ।<br>महावीरो वीरो दुरितपरसेनाऽभिविजये<br>विधेया मे भक्तिं पथि भवत एवाप्रतिनिधौ ॥64॥</div>
+    <a href='2-37-42.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='3-01-02.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-43><span class=incFontSz>+ </span><a href=#index>
+﻿Corroboration of difference in the same modificatory change</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿संखेज्जमसंखेज्जं अणंतकप्पं च केवलं णाणं ।<br>तह रागदोसमोहा अण्णे वि य जीवपज्जाया ॥43॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Kevala-gyana <span class=comment>(Perfect knowledge)</span> is threefold:-Sankhyata <span class=comment>(measurable)</span>, Asankhyata <span class=comment>(immeasurable)</span> and Ananta <span class=comment>(infinite or endless)</span>. In the same fashion Raga <span class=comment>(attachment)</span>, Dvesa <span class=comment>(hatred)</span> and Moha <span class=comment>(infatuation)</span> are also the non-essential modificatory changes of the Jiva <span class=comment>(Soul)</span>.</div>
   </body>
 </html>
