--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/3-03-04.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/3-03-04.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='3-01-02.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='3-05-06.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-3-03-04><span class=incFontSz>+ </span><a href=#index>
+﻿Pratitya (authentic) vachana</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿पच्चुप्पन्नं भावं विगयभविस्सेहिं जं सम्मण्णेइ ।<br>एयं पडुच्चवयणं दव्वंतरणिस्सियं जं च ॥3॥<br>दव्वं जहा परिणयं तहेव अस्थि त्ति तम्मि समयम्मि ।<br>विगयभविस्सेहि उ पज्जएहिं भयणा विभयणा वा ॥4॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Those words that connect the present change of a thing with its past and future changes and those words that synthetise the general running through all the individuals are words that are reliable or authentic. <br>Because although the present change of a certain thing apparently has not any relation to the changes of that thing in past or in future still the truth is that the present change has definitely a relation with the past and future changes of that thing.</div>
   </body>
 </html>
