--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/3-05-06.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/3-05-06.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='3-03-04.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='500.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-3-05-06><span class=incFontSz>+ </span><a href=#index>
+﻿How the attributes of existence as well as of non-existence are possible in one and the same thing</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿परपज्जवेहिं असरिसगमेहिं णियमेण णिञ्चमवि नत्थि ।<br>सरिसेहिं पि वंजणओ अस्थि ण पुणऽत्थपज्जाए ॥5॥<br>पच्चुप्पण्णम्मि वि पज्जयम्मि भयणागइं पडइ दव्वे ।<br>जं एगगुणाईया अणंतकप्पा गमविसेसा ॥6॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Every thing is non-existent from the standpoint of dissimilar particulars that are absolutely different from the thing. Even among things that are similar a thing exists from Vyanjana-paryaya point of view and does not exist from Arthaparyaya point of view.<br>Even as regards the present state a substance is both different and not different from it. For the degrees of qualities range from one to infinity.</div>
   </body>
 </html>
