--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-08.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-08.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-07.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-09.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-08><span class=incFontSz>+ </span><a href=#index>
-﻿Circumstances under which there occurs an overlapping of these two Principal Nayas are mentioned in the following verse --</a><span class=decFontSz> -</span></div>
+﻿नय : एक-दूसरे से अतिक्रान्त</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿पज्जवणयवोक्कंतं वत्थुं दव्वट्ठियस्स वयणिज्जं ।<br>जाव दविओवओगो अपच्छिमवियप्प-निव्वयणो ॥8॥</div>
+    <div class=gathaS>﻿पर्यायनयव्युक्रान्तं वस्तु द्रव्यार्थिकस्य वचनीयम् ।<br>यावद्-द्रव्योपयोगोऽपश्चिमविकल्पनिर्वचनः ॥8॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जाव]</font></b> जब तक <b><font color=darkRed>[अपच्छिमवियप्पणिव्वयणो]</font></b> अन्तिम विकल्प <span class=comment>(और)</span> वचन-व्यवहार <span class=comment>(रूप)</span> <b><font color=darkRed>[दविओवओगो]</font></b> द्रव्योपयोग <span class=comment>(है)</span> <span class=comment>(ताव)</span> तब तक <b><font color=darkRed>[पज्जवणयवोक्कंतं]</font></b> पर्यायार्थिकनय से अतिक्रान्त <b><font color=darkRed>[वत्थुं]</font></b> वस्तु को <b><font color=darkRed>[दव्वट्ठियस्स]</font></b> द्रव्यार्थिक <span class=comment>(नय)</span> की <b><font color=darkRed>[वयणिज्जं]</font></b> वाच्य जानो ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Dravyastika includes in itself all those statements in which there is some sort of general statement. In all such statements there is an overlapping of Paryayastika also. Only that statement where there is no further possibility of particularization falls under the strict purview of pure Paryayastika.</div>
   </body>
 </html>
