--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-13.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-13.html
@@ -46,8 +46,10 @@
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
     <a href='1-12.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-14.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-13><span class=incFontSz>+ </span><a href=#index>
-﻿In the following verse the author explains as to how both these Nayas become wrong in their exclusive assertions --</a><span class=decFontSz> -</span></div>
+﻿दोनों नय : असत्य दृष्टि ?</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿एए पुण संगहओ पाडिक्कमलक्खणं दुवेण्हं पि ।<br>तम्हा मिच्छद्दिट्ठी पत्तेयं दो वि मूलणया ॥13॥</div>
+    <div class=gathaS>﻿एते पुनः संग्रहतः प्रत्येकमलक्षणं द्व्योरपि ।<br>तस्मान्‌ मिथ्यादृष्टी प्रत्येकं द्वावपि मूलनयौ ॥13॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[एए]</font></b> ये <b><font color=darkRed>[पुण]</font></b> फिर <b><font color=darkRed>[संगहओ]</font></b> संग्रह <span class=comment>(परस्पर अभिन्‍न)</span> नय से <b><font color=darkRed>[दुर्वेण्हं]</font></b> दोनों <b><font color=darkRed>[पि]</font></b> भी <b><font color=darkRed>[पाडिक्कमलक्खणं]</font></b> प्रत्येक अलक्षण <span class=comment>(लक्षण वाले नहीं हैं)</span> <b><font color=darkRed>[तम्हा]</font></b> इसलिए <b><font color=darkRed>[पत्तेयं]</font></b> प्रत्येक <b><font color=darkRed>[दो]</font></b> दोनां <b><font color=darkRed>[वि]</font></b> ही <b><font color=darkRed>[मूलणया]</font></b> मूल नय <b><font color=darkRed>[मिच्छादिट्ठी]</font></b> मिथ्यादृष्टि हैं ।</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿These three characteristics of birth, decay and stability must dwell together in harmony to make a real definition of a thing in its integral form. Each Naya therefore, if taken independently, isolated from the other, can never yield an adequate idea of Sat an entity. Both these, therefore, divorced from each other, are wrong in their standpoints.</div>
   </body>
 </html>
