--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-43.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/1-43.html
@@ -48,6 +48,7 @@
     <a href='1-42.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='1-44-046.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-1-43><span class=incFontSz>+ </span><a href=#index>
 ﻿Real significance of the viewpoint of Dravyarthikanaya</a><span class=decFontSz> -</span></div>
    <div class=gatha>﻿पडिपुण्णजोव्वणगुणो जह लज्जइ बालभावचरिएण ।<br>कुणइ य गुणपणिहाणं अणागयसुहोवहाणत्थं ॥43॥</div>
+    <div class=gathaS>﻿प्रतिपूर्णयौवनगुणो यथा लज्जते बालभावचारित्रेण।<br>करोति च गुणप्रणिधानमनागतसुखोपधानार्थम्‌ ॥43॥</div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿A man who has attained his youth is ashamed of the activities of his childhood and at the same time longs to have those qualities that would contribute to his future happiness.</div>
   </body>
 </html>
