--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-16-17.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-16-17.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-15.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-18.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-16-17><span class=incFontSz>+ </span><a href=#index>
+﻿Author explains the illustration given in the preceding verse and establishes finally his own views</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿पण्णवणिज्जा भावा समत्तसुयणाणदंसणा विसओ ।<br>ओहिमणपज्जवाण उ अण्णोण्णविलक्खणा विसओ ॥१६॥<br>तम्हा चउव्विभागो जुज्जइ ण उ णाणदंसणजिणाणं ।<br>सयलमणावरणमणंतमक्खयं केवलं जम्हा ॥१७॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿That kind of knowledge, which is called Sruta i.e, heard or studied, deals with things that can be stated or mentioned by means of words. While the provinces of Avadhi and Manahparyaya kinds of knowledge are things altogether distinct and different in each kind. All these things are limited and may yield to some sort of classification or division.<br>But in the case of knowledge, and perception of a Kevalin unlike the four kinds of knowledge no division is possible. For that knowledge and perception are absolute, perfect, endless and imperishable.</div>
   </body>
 </html>
