--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-18.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-18.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-16-17.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-19.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-18><span class=incFontSz>+ </span><a href=#index>
+﻿Verse 18th wipes out scriptural inconsistencies</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿परवत्तव्वयपक्खा अविसिट्ठा तेसु तेसु सुत्तेसु ।<br>अत्थगईअ उ तेसिं वियंजणं जाणओ कुणइ ॥18॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿In some of the Sutras apparently it seems that the views of Krama-vada and Sahavada are mentioned and supported but it is for the wise to see that these Sutras are interpreted in their proper spirit <span class=comment>(that is in a way in which they are shown to be in agreement with the view of oneness)</span>.</div>
   </body>
 </html>
