--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-19.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-19.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-18.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-20.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-19><span class=incFontSz>+ </span><a href=#index>
+﻿Author removes all the doubts as regards his own view</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿जेण मणोविसयगयाण दंसणं णत्थि दव्वजायाण ।<br>तो मणपज्जवणाणं णियमा णाणं तु णिद्दिट्ठं ॥19॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿In as much as there is no Perception <span class=comment>(Darsana)</span> of substance that is the object of Manah-paryaya, it is exclusively said to be Gyana and not perception.</div>
   </body>
 </html>
