--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-23-24.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-23-24.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-21-22.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-25.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-23-24><span class=incFontSz>+ </span><a href=#index>
+﻿Illustration given by the Ekadesi objector</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿जइ ओग्गहमेत्तं दंसणं ति मण्णसि विसेसिअं णाणं ।<br>मइणाणमेव दंसणमेवं सइ होइ निप्फण्णं ॥23॥<br>एवं सेसिंदियदंसणम्मि नियमेण होइ ण य जुत्तं ।<br>अह तत्थ णाणमेत्तं घेप्पइ चक्खुम्मि वि तहेव ॥24॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿If you say that all Avagraha is Darsana and comprehending the particulars of a thing is Gyana <span class=comment>(knowledge)</span> then it follows that Mati-Gyana alone is Darsana <span class=comment>(perception)</span>.<br>The same must be said of all the rest of the senses as regards Darsana. But this is absurd. Now if in the case of objects of other senses, only knowledge is accepted the same must be accepted in the case of the objects of sight.</div>
   </body>
 </html>
