--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-28.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-28.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-27.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-29.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-28><span class=incFontSz>+ </span><a href=#index>
+﻿Why Sruta-Gyana is not Darsana ?</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿जं पञ्चक्खग्गहणं ण इन्ति सुयणाणसम्मिया अत्था ।<br>तम्हा दंसणसद्दो ण होइ सयले वि सुयणाणे ॥28॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿The term Darsana cannot be applied to sruta-gyana because the things conceived by sruta-gyana cannot be directly conceived.</div>
   </body>
 </html>
