--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-29.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/2-29.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-28.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='2-30.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-2-29><span class=incFontSz>+ </span><a href=#index>
+﻿Arrangement of Avadhi-darsana</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿जं अप्पुट्ठा भावा ओहिण्णाणस्स होंति पच्चक्खा ।<br>तम्हा ओहिण्णाणे दंसणसद्दो वि उवउत्तो ॥29॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿There can be also Avadhi-darsana because by Avadhi-gyana things though untouched are directly comprehended. It means that as there is Avadhi-gyana there is also Avadhi-darsana.</div>
   </body>
 </html>
