--- a/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/3-01-02.html
+++ b/jainDataBase/shastra/06_न्याय/06_सन्मतितर्क--सिद्धसेनाचार्य/html/3-01-02.html
@@ -45,6 +45,9 @@
       </style>
     </head>
     <body oncopy="return false" onpaste="return false" oncut="return false">
-    <a href='3-05-06.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>   <div class=gatha>﻿Incomplete</div>
+    <a href='2-43.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='3-03-04.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>    <br><div class=title id=gatha-3-01-02><span class=incFontSz>+ </span><a href=#index>
+﻿Mutual identity of the general and the particular</a><span class=decFontSz> -</span></div>
+   <div class=gatha>﻿सामण्णम्मि विसेसो विसेसपक्खे य वयणविणिवेसो ।<br>दव्वपरिणाममणणं दाएइ तयं च णियमेइ ॥1॥<br>एगतणिव्विसेसं एयंतविसेसियं च वयमाणो ।<br>दव्वस्स पज्जवे पज्जवा हि दवियं णियत्तेइ ॥2॥</div>
+    <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>﻿Sometimes the particular is mentioned with reference to the general, while sometimes the general is mentioned with reference to the particular. Such mixed references go to prove that apart from the general there is such a thing as its particular that is different from it or from its transformation, however, that particular is in no way different from the general.<br>A person who refers exclusively to the general divests it of its particulars; similarly a person who talks of the particulars exclusively divorces them from their general.</div>
   </body>
 </html>
